chore: optimised the backend code and fixed GPA calculation